minor alignment issues

--- a/code/style.css
+++ b/code/style.css
@@ -197,6 +197,12 @@ checkbox {
   font-family: "Lexend Giga", sans-serif;
 }
 /***accordion***/
+
+/* .accordion,
+row,
+col-sm-6 {
+  padding: 0 30px;
+} */
 .accordion-intro {
   margin-bottom: 40px;
   color: grey;
